--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ua.net.hj.CrossZeros
+main.class=ua.net.hj.cz.CrossZeros
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
